--- a/src/visualizationPanel/main.css
+++ b/src/visualizationPanel/main.css
@@ -47,7 +47,6 @@ body {
   font-weight: 600;
 }
 
-
 .visualiserMenu {
   display: flex;
   flex: 1;
@@ -131,8 +130,7 @@ h1 {
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0, 0, 0); /* Fallback color */
   background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
-  color:black;
-
+  color: black;
 }
 
 /* Modal Content/Box */
@@ -242,12 +240,13 @@ input[type="text"] {
   padding: 10px 6px;
   font-size: 16px;
   margin: auto;
-  box-sizing: border-box; 
+  box-sizing: border-box;
   border: 2px solid rgba(204, 204, 204, 0.755);
   -webkit-transition: 0.5s;
   transition: 0.5s;
   outline: none;
   border-radius: 4px;
+  margin-bottom: inherit;
 }
 
 input[type="text"]:focus {
@@ -405,4 +404,16 @@ label {
   color: white;
   cursor: pointer;
   border-top: 4px solid rgb(75, 75, 75);
+}
+
+select {
+  width: 100%;
+  padding: 10px 6px;
+  font-size: 16px;
+  box-sizing: border-box;
+  border-radius: 4px;
+}
+
+option:hover {
+  background-color: rgb(248, 0, 0);
 }
